# stm32-traffic-light

./: .cproject  .mxproject  .project  CMakeLists.txt  doAn Debug.launch  ligh_data.h  light_slave Debug.launch  light_slave.ioc  main.c  smartHome Debug.launch  traffic_light Debug.launch  traffic_light.ioc
Core/Inc/: board.h  ligh_data.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: board.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32l1xx_hal_msp.c  stm32l1xx_it.c
Core/User/utils/: sm_logger.c
Debug/: doAn.elf  doAn.list  doAn.map  light_slave.elf  light_slave.list  light_slave.map  makefile  objects.list  smartHome.elf  smartHome.list  smartHome.map  sources.mk  traffic_light.elf  traffic_light.list  traffic_light.map
Debug/Core/Src/: board.cyclo  board.d  board.su  main.cyclo  main.d  main.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.d  stm32f1xx_hal_msp.su  stm32f1xx_it.cyclo  stm32f1xx_it.d  stm32f1xx_it.su  stm32l1xx_hal_msp.cyclo  stm32l1xx_hal_msp.d  stm32l1xx_hal_msp.su  stm32l1xx_it.d  subdir.mk  system_stm32f1xx.d  system_stm32l1xx.d
Debug/User/: main_app.cyclo  main_app.d  main_app.su  subdir.mk
USB_DEVICE/App/: usbd_cdc_if.c
User/: main_app.c  main_app.h
User/drivers/lte/: CMakeLists.txt  sm_ec200.c  sm_ec200.h  sm_ec200_http.c  sm_ec200_http.h  sm_ec200_mqtt.c  sm_ec200_mqtt.h
User/drivers/lte/testing/: CMakeLists.txt  http_testing.c  testing.c
User/utils/: simple_queue.h  sm_fifo.c  sm_fifo.h  sm_logger.c  sm_string_util.c  sm_string_util.h
common/modbus/mb_slave/: CMakeLists.txt  example.c
(+140 files in other folders)
